--- a/src/App.css
+++ b/src/App.css
@@ -24,13 +24,14 @@ main {
 
 aside {
   width: 20vw;
+  /* margin: 30px; */
 }
 
 .footerNames {
   text-align: center;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 #logo {
@@ -39,11 +40,6 @@ aside {
   width: 10vh;
   margin: 10px;
 }
-/* .info {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-} */
 
 .name {
   display: flex;
@@ -55,10 +51,9 @@ aside {
   align-items: center;
   flex-grow: 1;
   display: block;
-  /* flex-direction: row; */
+
   border-top: solid 1px black;
-  /* background-color: bisque; */
-  /* padding: 20px; */
+
   margin: 1px;
   width: 80vw;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -79,6 +74,7 @@ aside {
   text-align: center;
   border-left: 1px solid black;
   width: 20vw;
+  /* width: 15vw; */
   padding: 4px;
 
   background: url(https://s3.envato.com/files/230057146/Falling_Basketball_still.jpg);
@@ -86,11 +82,6 @@ aside {
 
 .info {
   width: 80vw;
-
-  /* display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 2px; */
 }
 
 .start {
@@ -110,5 +101,7 @@ aside {
 .Merchandise {
   display: flex;
   justify-content: center;
-  border-top: 5px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  padding: 5px;
 }
