--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,6 @@ aside {
   width: 20vw;
   /* margin: 30px; */
 }
-aside.tiny {
-  width: 20vw;
-}
 
 .footerNames {
   text-align: center;
@@ -66,10 +63,10 @@ aside.tiny {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.teams {
+/* .teams {
   display: flex;
   flex-wrap: wrap;
-}
+} */
 
 .location {
   display: flex;
@@ -113,5 +110,17 @@ aside.tiny {
   padding: 5px;
 }
 
+.sideTitle {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+}
 .tiny {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+.numbers {
+  margin: 10px;
 }
